scan sample_scripts directory too

--- a/.github/workflows/gist-ci-cd.yml
+++ b/.github/workflows/gist-ci-cd.yml
@@ -33,3 +33,6 @@ jobs:
 
     - name: Use repo-gist-sync CLI on "curl" directory
       run: gistdirsync --auth-token ${{ secrets.GIST_TOKEN }} --directory ./curl/
+
+    - name: Use repo-gist-sync CLI on "sample_scripts" directory
+      run: gistdirsync --auth-token ${{ secrets.GIST_TOKEN }} --directory ./sample_scripts/
